2006-08-09 Joerg Wunsch <j@uriah.heep.sax.de>

	* stk500v2.c (stk500v2_program_enable): Fix a typo
	(synchloops vs. synchcycles).

2006-08-04 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add parallel programming definitions for
	the ATmega8/48/88/168.

2006-07-22 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add the ATtiny11, an HVSP-only device.

2006-07-21 Joerg Wunsch <j@uriah.heep.sax.de>

	Implement STK500 (v2) HVSP mode.
	* stk500v2.c: Add new functions for HVSP support.
	* stk500v2.h: Add prototype for the stk500hvsp programmer.
	* avrpart.h: Add fields to struct avrpart for new features.
	* config_gram.y: Extend the configuration syntax for new
	features required for HVSP support.
	* lexer.l: (Ditto.)
	* avrdude.conf.in: Add HVSP support for ATtiny13 and
	ATtiny45 as an example.
	* avrdude.1: Document stk500hvsp.
	* doc/avrdude.texi: (Ditto.)

2006-07-21 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrpart.c: Print the very verbose memory details only
	in debug level > 4.

2006-07-19 Joerg Wunsch <j@uriah.heep.sax.de>

	* stk500v2.c: Add more parameters for PP mode.  Fix the
	non-paged write operations for old AVRs.
	* lexer.l: Add more parameters for PP mode.
	* config_gram.y: (Ditto.)
	* avrpart.h: (Ditto.)
	* avrdude.conf.in: Use the new PP mode parameters; add PP mode
	definitions for AT90S8515.
	* avrdude.1: Document the stk500pp support.
	* doc/avrdude.texi: (Ditto.)

2006-07-19 Joerg Wunsch <j@uriah.heep.sax.de>

	* stk500v2.c: Hide stk500v2_set_sck_period_mk2() behind an #if
	defined(HAVE_LIBUSB) as it is only used there (for the AVRISP
	mkII).

2006-07-17 Joerg Wunsch <j@uriah.heep.sax.de>

	* stk500v2.c: Fix all bugs in stk500pp.  Eliminate pagebuf, and
	use a stack-allocated buffer instead, as the pagesize can be at
	most 256 for all current AVRs anyway.

2006-07-17 Joerg Wunsch <j@uriah.heep.sax.de>

	* main.c: Use mem->desc in place of upd->memtype in more places to
	give the full name of the respective memory area, instead of